[package]
name = "try_wasi_async"
version = "0.1.0"
edition = "2018"

[dependencies]
async-executor = "*"
futures-lite = "*"
# surf = "*"
surf = { version = "*", default-features = false, features = ["wasm-client"] }
# surf = { file = "../surf", default-features = false, features = ["wasm-client"] }

# [patch.crates-io]
# http-client = { path = "../http-client" }
# http-types = { path = "../http-types" }